--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,8 +19,10 @@
 @import "layout/footer";
 @import "layout/contact";
 @import "layout/colabs";
+@import "layout/details";
 @import "layout/areamain";
 @import "layout/hero";
 @import "layout/header";
+@import "layout/team";
 
 @import "pages/home";
