--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,11 +11,30 @@ html{
 
 
 body{
+    background-color:$color-bg ;
     box-sizing: border-box;
     // padding: 3rem;
     font-family: $font-family-primary;
     overflow-x: hidden;
 
+}
+
+
+h1,h2,h3,h4,h5{
+    font-family: $font-family-secondary;
+}
+
+h4{ 
+    font-size: 2rem;
+    color:$color-white;
+    letter-spacing: 0.4rem;
+}
+
+
+.img-avatar{
+    width: 30rem;
+    height: 30rem;
+    margin-left: 50%;
 }
 
 
