--- a/sass/components/_swiper.scss
+++ b/sass/components/_swiper.scss
@@ -1,7 +1,8 @@
 .swiper {
-    width: 50%;
+    width: 100%;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    background-color: $color-bg;
   }
 
   .swiper-slide {
