--- a/sass/layout/_areamain.scss
+++ b/sass/layout/_areamain.scss
@@ -1,104 +1,18 @@
-.about,
 .services {
-
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-block: 5rem;
+    padding-block: 3rem;
+    
 
 
     &__title {
         font-size: 5rem;
         font-family: $font-family-secondary;
         font-weight: 700;
-        margin-left: 5rem;
-    }
+        text-transform: uppercase;
+        color: $color-primary;
 
-    &__all {
-        width: 90%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: space-around;
-    }
-
-    &__item {
-        max-width: 30rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 2rem;
-        border-radius: 1rem;
-
-        @include respond(tab-port) {
-            min-width: 25rem;
-            margin: 1rem !important;
-        }
-
-
-        &__subtitle {
-            font-family: $font-family-secondary;
-            margin-top: 2rem;
-            font-size: 2.2rem;
-            font-weight: 800;
-            text-align: center;
-
-
-
-        }
-
-        &__describe {
-            font-family: $font-family-secondary;
-            width: 20rem;
-            margin-top: 1rem;
-            text-align: center;
-            font-size: 1.2rem;
-            line-height: 1.6;
-            font-weight: 400;
-
-
-
-        }
-
-
-    }
-
-
-
-}
-
-
-.icon-box {
-    width: 17rem;
-    height: 17rem;
-    background-image: linear-gradient(355deg, #667eea 0%, #764ba2 100%);
-    color: white;
-    display: grid;
-    align-content: center;
-    justify-content: center;
-    text-align: center;
-    border-radius: 66% 34% 70% 30% / 30% 56% 44% 70%;
-    transition: transform 0.2s;
-
-    &:hover {
-        transform: skewX(-10deg) rotate(360deg);
-    }
-
-    @include respond(big-desktop) {
-        width: 20rem;
-        height: 20rem;
-    }
-}
-
-.icon-box i {
-    font-size: 10rem;
-}
-
-
-.services {
-    &__title {
         @include respond(tab-port) {
 
             font-size: 3.2rem;
@@ -110,39 +24,95 @@
     }
 
     &__all {
-        margin-top: 10rem;
+        margin-top: 6rem;
+        width: 90%;
         display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-around;
+        gap: 5rem;
+        padding-bottom: 5rem;
     }
 
     &__item {
-        min-width: 30%;
-        margin-top: 5rem;
+        max-width: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border-radius: 1rem;
+       
+        padding: 4rem;
+        width: 100%;
+        transform: all 0.5s;
 
-
-
-        &__subtitle {
-            font-size: 3rem;
-        }
-
-        &__describe {
-            width: 70%;
-            font-size: 1.5rem;
+        @include respond(tab-port) {
+            min-width: 25rem;
+            margin: 1rem !important;
         }
 
         &:hover {
             background-color: rgba(2, 2, 2, 0.178);
-            transform: scale(1.1);
+            transform: translateY(-2rem) scale(1.1);
         }
 
-        @include respond(phone) {
-          margin-top: 2rem;
+        &__subtitle {
+            font-family: $font-family-secondary;
+            font-size: 3rem;
+            font-weight: 800;
+            text-align: center;
+            color: $color-primary;
+            text-align: center;
+            display: flex;
+            align-items: center;
+
+
         }
+
+        &__describe {
+            display: flex;
+            align-items: center;
+            width: 20rem;
+            font-weight: 600;
+            margin-top: 1rem;
+            text-align: center;
+            font-size: 1.6rem;
+            line-height: 1.6;
+            font-weight: 400;
+            color:$color-white;
+            object-fit: cover;
+
+
+
+        }
+
+        &__link{
+            margin-top: 2rem;
+            text-decoration: none;
+            font-size: 1.6rem;
+            color: $color-primary;
+            border-bottom: 1px solid $color-primary;
+            padding: 0.5rem;
+            transition: all .2s;
+
+            &:hover{
+                background-color: $color-primary;
+                color: $color-secondary;
+                transform: translateY(0%);
+                border-radius: 0.5rem;
+            }
+        }
+
+      
+
+
     }
 
     &__item img {
-        width: 30rem;
-        height: 25rem;
+        width: 18rem;
+        height: 18rem;
+        margin-bottom: 2rem;
 
         @include respond(big-desktop) {
             width: 35rem;
@@ -153,4 +123,9 @@
             height: 17rem;
         }
     }
+
+
+
 }
+
+
