--- a/sass/layout/_colabs.scss
+++ b/sass/layout/_colabs.scss
@@ -1,19 +1,20 @@
 .colabs {
-    background-image: linear-gradient(355deg, #667eea 0%, #764ba2 100%);
+    background-color: $color-primary;
     display: flex;
     flex-direction: column;
     padding-bottom: 5rem;
-    clip-path: polygon(0 13%, 100% 0, 100% 87%, 0 100%);
     align-items: center;
     justify-content: center;
     padding-top: 10rem;
-    min-height: 90rem;
+    min-height: 80rem;
+    position: relative;
 
     &__title {
         font-size: 5rem;
         font-weight: 800;
         font-family: $font-family-secondary;
-        color: $color-white;
+        color: $color-secondary;
+        text-transform: uppercase;
 
         @include respond(tab-port) {
 
@@ -28,7 +29,7 @@
         font-size: 1.6rem;
         font-weight: 400;
         font-family: $font-family-secondary;
-        color: $color-white;
+        color: $color-secondary;
         margin-bottom: 5rem;
 
         @include respond(tab-port) {
