--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -11,7 +11,7 @@
     &__head {
         font-family: $font-family-secondary;
         font-size: 5rem;
-        color: $color-black;
+        color: $color-white;
         font-weight: 800;
 
         @include respond(tab-port) {
