--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     // background-color: $color-black;
-    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    // background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     min-height: 30rem;
     width: 100%;
     padding-bottom: 10rem;
