--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,15 +1,16 @@
 .hero {
-  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background:$color-bg;
   clip-path: polygon(0 0, 100% 0, 100% 88%, 0% 100%);
   padding-top: 12rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
 
   position: relative;
-  padding-bottom: 17rem;
+  padding-bottom: 3rem;
   width: 100%;
+  height: 100vh;
 
   @include respond(tab-land) {
     padding-top: 18rem;
@@ -24,6 +25,7 @@
 
 
   &__text {
+    margin-top: 5rem;
 
     display: flex;
     flex-direction: column;
@@ -32,7 +34,7 @@
     color: $color-white;
     font-family: $font-family-secondary;
     font-weight: 800;
-    width: 50%;
+    width: 70%;
 
     @include respond(tab-land) {
       padding-top: 2rem;
@@ -46,14 +48,18 @@
 
   &__text p {
     position: relative;
-    font-size: 5.5rem;
+    font-size: 5rem;
     font-family: $font-family-secondary;
     font-weight: 800;
     color: $color-white;
+    transform: scale(1,2);
+    text-transform: uppercase;
+
+
 
     &:nth-child(2) {
-      transform: translateX(8rem);
-      -webkit-text-stroke: 0.05vw $color-white;
+      margin-top: 5rem;
+      -webkit-text-stroke: 0.05vw $color-primary;
       color: rgba(255, 255, 255, 0.014);
 
 
@@ -65,22 +71,20 @@
         transform: translateX(2rem);
       }
 
-      &::before {
-        content: attr(data-text);
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        color: $color-white;
-        -webkit-text-stroke: 0vw $color-white;
-        border-right: 3px solid $color-secondary;
-
-        overflow: hidden;
-        animation: animeText 6s linear infinite;
-      }
-    }
-
+  //     &::before {
+  //       content: attr(data-text);
+  // position: absolute;
+  // top: 0;
+  // left: 0;
+  // width: 0; 
+  // height: 100%;
+  // color: var(--color-primary); 
+  // border-right: 3px solid $color-primary; 
+  // overflow: hidden;
+  // animation: animeText 6s linear infinite;
+  //     }
+  //   }
+  }
     @include respond(big-desktop) {
       font-size: 7rem;
     }
@@ -101,40 +105,13 @@
 
   }
 
-  &__img {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    width: 50%;
-
-    &__avatar {
-      width: 60rem;
-      height: 45rem;
-
-      @include respond(big-desktop) {
-        width: 70rem;
-        height: 50rem;
-      }
-
-      @include respond(tab-land) {
-        display: none;
-      }
-
-    }
-
-
-
-  }
 
 
   &__motto {
+    margin-top: 15rem;
     display: flex;
     flex-direction: row;
     color: white;
-    position: absolute;
-    left: 13rem;
-    bottom: 3rem;
     transform: rotate(-3.5deg);
 
     @include respond(tab-port) {
@@ -157,8 +134,8 @@
 .waviy {
   position: relative;
   -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0, 0, 0, .2));
-  font-size: 3rem;
-  margin-left: 2rem;
+  font-size: 2.5rem;
+  margin-left: 5rem;
   transform: translateY(-3rem);
 
   @include respond(tab-port) {
@@ -176,7 +153,7 @@
     font-family: $font-family-secondary;
     position: relative;
     display: inline-block;
-    color: #fff;
+    color: $color-primary;
     animation: waviy 2s infinite;
     animation-delay: calc(0.1s * var(--i));
 
